  Locale:
    - Removed the period after the "Trade Productivity" mod settings in the EN locale.
  Modding:
    - Updated Factorio version dependency to prevent crash on pre-2.0.69 versions.
  Bugfixes:
    - Fixed all possible crashes that could be caused by using the wrong value types in commands.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 15/11/25
  Features:
    - Added several quests. There are now 50 in total.
  Balancing:
    - Added tiered quests for item ranks to fill the progression gap.
    - Replaced the "Catalog Professional" quest with the new, equivalent "First Red Star" quest.
    - Moved the "Catalog Professional" quest to an earlier stage of the game, having easier requirements.
  Gui:
    - Added info tooltip for the quality preview dropdown in the hex core GUI. Removed the relevant clutter.
    - Added an intermediate quest for each planet which unlocks the other quests on that planet by visiting it, cleaning up the questbook early-game.
    - Added extra info to the tooltip of the upgrade quality button in hex cores.
  Changes:
    - Changed the shortcut tool icons (for "Claim Hexes" and "Delete Hex Cores") from white to black.
  Bugfixes:
    - Fixed that completed quests weren't showing complete progress bars after updating the mod.
    - Fixed that an overflowing trade could block other trades from occurring in some situations.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 1/10/25
  Gui:
    - Added image for the "Catalog Professional" quest.
  Bugfixes:
    - Fixed that updating the mod would duplicate rewards for quests.
    - Fixed that landfill was blocking the spawning of concrete between hexes.
    - Fixed crash caused by looting a 1.0.x dungeon in 1.1.0 or later.
    - Fixed crash caused by visiting a previously unvisited planet after migrating from a 1.0.x save.