@@ -637,6 +637,7 @@ return {
             ["big-electric-pole"] = 7789.6268323037775,
             biochamber = 50585.093639603074,
             bioflux = 1001.211832031809,
+            biolab = 8652156.0021070931,
             boiler = 671.46002229785881,
             ["buffer-chest"] = 27264.28212321745,
             ["bulk-inserter"] = 39485.821026154714,
@@ -789,6 +790,7 @@ return {
             spidertron = 30539276.046632513,
             splitter = 6121.9284515036625,
             spoilage = 50,
+            ["stack-inserter"] = 315429.67844327178,
             ["steam-engine"] = 5448.689600969974,
             ["steam-turbine"] = 33498.910109876779,
             ["steel-chest"] = 7887.2788562398155,
