@@ -298,7 +298,7 @@ return {
         },
         {
             name = "catalog-completionist",
-            conditions = {{type = "items-at-rank", value = 5, progress_requirement = 286}},
+            conditions = {{type = "items-at-rank", value = 5, progress_requirement = 288}},
             rewards = {
                 {type = "all-trades-productivity", value = 100},
                 {
