@@ -874,6 +874,7 @@ laser-shooting-speed=Laser Shooting Speed
 bullet-shooting-speed=Bullet Shooting Speed
 fire-shooting-speed=Fire Shooting Speed
 rocket-shooting-speed=Rocket Shooting Speed
+braking-force=Train Braking Force
 
 [item-buff-description]
 all-buffs-level=Increases the level of all item buffs without scaling their costs!\n\n[color=gray]Does not apply to "All Buffs Level" buffs.[.color]
